--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,11 +86,47 @@ jobs:
       - name: Run staticcheck
         run: staticcheck ./... || true
 
+  dco-check:
+    name: DCO Check
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check DCO sign-offs
+        run: |
+          FAILED=false
+          # Get the merge base to find commits in this PR
+          MERGE_BASE=$(git merge-base origin/main HEAD)
+          # Check each commit since merge base
+          for commit in $(git rev-list $MERGE_BASE..HEAD); do
+            if ! git log -1 --format='%B' "$commit" | grep -q "^Signed-off-by:"; then
+              echo "❌ Commit $commit is missing DCO Signed-off-by line"
+              git log -1 --format='Commit %h by %an: %s' "$commit"
+              FAILED=true
+            fi
+          done
+          if [ "$FAILED" = "true" ]; then
+            echo ""
+            echo "DCO check failed. All commits must be signed off."
+            echo "Please amend your commits with 'git commit --amend --signoff'"
+            echo "or configure git to automatically sign off: git config --local commit.signoff true"
+            exit 1
+          fi
+          echo "✓ All commits have proper DCO sign-offs"
+
   release:
     name: Release
     needs: [build, lint, security]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+      id-token: write
 
     steps:
       - name: Checkout code
@@ -101,16 +137,66 @@ jobs:
         with:
           go-version: '1.23'
 
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3
+
       - name: Build binaries
         run: |
           GOOS=linux GOARCH=amd64 go build -o bin/jvs-linux-amd64 ./cmd/jvs
           GOOS=linux GOARCH=arm64 go build -o bin/jvs-linux-arm64 ./cmd/jvs
           GOOS=darwin GOARCH=amd64 go build -o bin/jvs-darwin-amd64 ./cmd/jvs
           GOOS=darwin GOARCH=arm64 go build -o bin/jvs-darwin-arm64 ./cmd/jvs
+          GOOS=windows GOARCH=amd64 go build -o bin/jvs-windows-amd64.exe ./cmd/jvs
 
-      - name: Create Release
+      - name: Generate build artifacts summary
+        run: |
+          echo "## Build Artifacts" > release-notes.md
+          echo "" >> release-notes.md
+          echo "### Binaries" >> release-notes.md
+          echo "- \`jvs-linux-amd64\` - Linux x86_64" >> release-notes.md
+          echo "- \`jvs-linux-arm64\` - Linux ARM64" >> release-notes.md
+          echo "- \`jvs-darwin-amd64\` - macOS x86_64" >> release-notes.md
+          echo "- \`jvs-darwin-arm64\` - macOS ARM64 (Apple Silicon)" >> release-notes.md
+          echo "- \`jvs-windows-amd64.exe\` - Windows x86_64" >> release-notes.md
+          echo "" >> release-notes.md
+          echo "### Verification" >> release-notes.md
+          echo "All binaries are signed using Sigstore/cosign. To verify:" >> release-notes.md
+          echo "\`\`\`bash" >> release-notes.md
+          echo "cosign verify-blob jvs-linux-amd64 \\ " >> release-notes.md
+          echo "  --certificate-identity=https://github.com/jvs-project/jvs/.github/workflows/ci.yml@refs/tags/${{ github.ref_name }} \\ " >> release-notes.md
+          echo "  --certificate-oidc-issuer=https://token.actions.githubusercontent.com" >> release-notes.md
+          echo "\`\`\`" >> release-notes.md
+
+      - name: Sign binaries with cosign
+        env:
+          COSIGN_EXPERIMENTAL: 1
+        run: |
+          for binary in bin/jvs-*; do
+            cosign sign-blob --output-signature="${binary}.sig" --output-certificate="${binary}.pem" "${binary}"
+          done
+
+      - name: Create checksums
+        run: |
+          cd bin
+          sha256sum jvs-* > SHA256SUMS
+          cd ..
+
+      - name: Sign checksums file
+        env:
+          COSIGN_EXPERIMENTAL: 1
+        run: |
+          cosign sign-blob --output-signature="bin/SHA256SUMS.sig" --output-certificate="bin/SHA256SUMS.pem" "bin/SHA256SUMS"
+
+      - name: Upload artifacts to release
         uses: softprops/action-gh-release@v1
         with:
-          files: bin/jvs-*
+          files: |
+            bin/jvs-*
+            bin/*.sig
+            bin/*.pem
+            bin/SHA256SUMS*
+          body_path: release-notes.md
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
