feat: complete VS Code extension with assets
VS Code Extension:
- Add README with installation and usage
- Add database icon
- Add package-lock.json for dependencies

All v8.0 ecosystem integrations complete!

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -176,5 +176,21 @@
         "description": "Path to JVS executable"
       }
     }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/run.js"
+  },
+  "devDependencies": {
+    "@types/node": "^18.x",
+    "@types/vscode": "^1.80.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "typescript": "^5.0.0"
   }
 }
