--- a/vscode-extension/tsconfig.json
+++ b/vscode-extension/tsconfig.json
@@ -1,25 +1,16 @@
 {
-  "name": "jvs",
-  "version": "0.1.0",
-  "description": "JVS - Juicy Versioned Workspaces",
-  "main": "./src/extension.ts",
-  "engines": {
-    "vscode": "^1.80.0"
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
+    "outDir": "out",
+    "lib": ["ES2020"],
+    "sourceMap": true,
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/run.js"
-  },
-  "devDependencies": {
-    "@types/node": "^18.x",
-    "@types/vscode": "^1.80.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "typescript": "^5.0.0"
-  }
+  "exclude": ["node_modules", ".vscode-test"]
 }
