--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.8'
 
 services:
-  # JVS CLI service
+  # JVS CLI service (basic copy engine)
   jvs:
     build:
       context: .
@@ -26,21 +26,64 @@ services:
       dockerfile: Dockerfile
     image: ghcr.io/jvs-project/jvs:latest
     container_name: jvs-juicefs
+    privileged: true  # Required for FUSE
+    cap_add:
+      - SYS_ADMIN  # Required for FUSE mounts
+    devices:
+      - /dev/fuse  # FUSE device access
     working_dir: /workspace
     volumes:
       - ./workspace:/workspace
       - jvs-juicefs-data:/workspace/.jvs
-      # JuiceFS mount (requires JuiceFS setup)
-      # - juicefs-data:/mnt/juicefs
+      # JuiceFS mount (requires external JuiceFS setup)
+      # Uncomment and configure for your JuiceFS mount:
+      # - juicefs-data:/mnt/juicefs:shared
     environment:
       - JVS_ENGINE=juicefs-clone
-    # Add JuiceFS dependencies as needed
-    # command: /bin/sh
+      # JuiceFS connection (example with Redis)
+      # - JUICEFS_META=redis://juicefs-redis:6379/1
+    # depends_on:
+    #   - redis
+
+  # Optional: Redis for JuiceFS metadata
+  # redis:
+  #   image: redis:7-alpine
+  #   container_name: juicefs-redis
+  #   volumes:
+  #     - redis-data:/data
+  #   command: redis-server --appendonly yes
+
+  # Interactive shell with bash completion
+  jvs-shell:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: ghcr.io/jvs-project/jvs:latest
+    container_name: jvs-shell
+    working_dir: /workspace
+    volumes:
+      - ./workspace:/workspace
+      - jvs-shell-data:/workspace/.jvs
+    environment:
+      - TERM=xterm-256color
+    entrypoint: ["/bin/bash"]
+    # Interactive shell with auto-completion
+    command:
+      - -c
+      - |
+        source /usr/share/bash-completion/completions/jvs 2>/dev/null || true
+        echo "JVS Shell - Type 'jvs --help' for commands"
+        echo "Tab completion enabled for jvs command"
+        exec /bin/bash
 
 volumes:
   jvs-data:
     driver: local
   jvs-juicefs-data:
     driver: local
-  # juicefs-data:
-  #   driver: local
+  jvs-shell-data:
+    driver: local
+  redis-data:
+    driver: local
+  juicefs-data:
+    driver: local
