fix(ci): repair lint config, gosec path, Go version, Docker Hub fallback
- .golangci.yml: fix exclude-rules syntax (map not string), remove
  deprecated varcheck/deadcode linters, fix output format key
- ci.yml: fix gosec install path (securego not securecodewarrior),
  align Go version matrix to 1.25 (matches go.mod 1.25.6)
- docker.yml: Docker Hub login uses continue-on-error so missing
  secrets don't fail the entire workflow; push step gated on login
  success
- Dockerfile: update builder image to golang:1.25-alpine

Made-with: Cursor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.22', '1.23']
+        go-version: ['1.25']
 
     steps:
       - name: Checkout code
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: '1.25'
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
@@ -65,10 +65,10 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: '1.25'
 
       - name: Install gosec
-        run: go install github.com/securecodewarrior/gosec/v2@latest
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
       - name: Run gosec
         run: |
@@ -135,7 +135,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: '1.25'
 
       - name: Install cosign
         uses: sigstore/cosign-installer@v3
