fix(lint): exclude generated deepcopy/api files, fix nil-check before len
- .golangci.yml: exclude api/ and *_deepcopy.go from gosimple/staticcheck
  (generated Kubernetes code with redundant returns)
- cli/config.go: remove redundant nil check before len() (S1009)

Made-with: Cursor

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,6 +35,11 @@ issues:
         - gocyclo
     - path: "_deepcopy\\.go$"
       linters:
+        - gosimple
+        - staticcheck
+    - path: "api/"
+      linters:
+        - gosimple
         - staticcheck
   max-issues-per-linter: 0
   max-same-issues: 0
