fix(ci): deduplicate release asset uploads and upgrade gh-release action
Overlapping glob patterns (bin/jvs-*, bin/*.sig, bin/*.pem) caused
duplicate upload attempts, resulting in 404 on the second attempt.
Simplify to bin/* since all release artifacts are in that directory.
Upgrade to softprops/action-gh-release@v2 which uses GITHUB_TOKEN
from the job permissions automatically.

Made-with: Cursor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,15 +185,9 @@ jobs:
           cosign sign-blob --yes --output-signature="bin/SHA256SUMS.sig" --output-certificate="bin/SHA256SUMS.pem" "bin/SHA256SUMS"
 
       - name: Upload artifacts to release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          files: |
-            bin/jvs-*
-            bin/*.sig
-            bin/*.pem
-            bin/SHA256SUMS*
+          files: bin/*
           body_path: release-notes.md
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
